Add partial to be rendered by channel

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,9 +4,7 @@
 
 <h2>Your Discussion</h2>
 <div class="all-messages">
-  <% @messages.each do |message| %>
-    <p><%= message.text %> --- <%= message.user.username %></p>
-  <% end %>
+  <%= render @messages %>
 </div>
 
 
